--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Project</title>
 </head>
+
 <body>
     <h1>Hello, World!</h1>
-    <h1>Joseph Vazquez</h1>
+    <h1>I'm Joseph Vazquez</h1>
+    <p> My idea for software that i can create for my final project is a schedule/ class planner.</p>
 </body>
+
 </html>
